0.1.0 Initial Version

0.2.0 * Refined stream interface
      * Restricted 'define' to operate on global environment only
        Local environment now unexpandable.
	  * Introduced parameter lists with variable length through &REST
	  * Introduced support for dotted pair notation  using '.'

0.3.0 * Some adaptions towards portability to OpenBSD
      * Introduced preallocated memory for Expressions
      * Introduced packed structure format for Expressions
	  * Added functions: /
	  * Added predicats to check for type of an expression
	  * Added automatism for creating releases

0.4.0 * Adaptions to support LLVM/clang
      * Added Garbage Collector MARK_AND_SWEEP