@@ -24,18 +24,18 @@
 #define COPYRIGHT "Copyright (C) 2010, 2012, 2014  "                          \
                   "Michael J. Beer <michael.josef.beer@googlemail.com>"
 
-#define DEBUG
-#define DEBUG_READER
+/* #define DEBUG */
+/* #define DEBUG_READER */
 /* #define DEBUG_EVAL */
 /* #define DEVUG_ENVIRONMENT*/
-#define DEBUG_NATIVE_FUNCTIONS
+/* #define DEBUG_NATIVE_FUNCTIONS */
 /* #define DEBUG_CONS */
 /* #define DEBUG_EXPRESSION */
 /* #define DEBUG_SYMBOL_TABLE */
 /* #define DEBUG_STACK */
 /* #define DEBUG_LAMBDA */
 /* #define DEBUG_GARBAGE_COLLECTOR */
-#define DEBUG_TYPES
+/* #define DEBUG_TYPES */
 
 /**
  * Should hash tables place strings or copies of strings as keys?
